SET (THE_PROJECT object-pool-lib)
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${THE_PROJECT} VERSION 1.0.0 DESCRIPTION "object pool lib")

SET (LIBRARY_NAME object-pool)

SET (BUILD_SHARED_LIBS ON)

SET (SOURCES_LIST
      objectFactory.h
      objectPool.h
      objectPool.cpp
)

ADD_LIBRARY(${LIBRARY_NAME} ${SOURCES_LIST})

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

