SET (THE_PROJECT object-pool-example)
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${THE_PROJECT} VERSION 1.0.0 DESCRIPTION "object pool example")

SET (SOURCES_LIST object-pool-example.cpp)
SET (OBJ_EXECUTABLE object-pool-example)

ADD_EXECUTABLE(${OBJ_EXECUTABLE} ${SOURCES_LIST})

SET (LINKED_LIBS object-pool)

TARGET_LINK_LIBRARIES(${OBJ_EXECUTABLE} LINK_PUBLIC ${LINKED_LIBS})

