SET (THE_PROJECT object-pool-unit-tests)
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${THE_PROJECT} VERSION 1.0.0 DESCRIPTION "object pool unit tests")

FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

FIND_PACKAGE(GMock REQUIRED)
INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIRS})

SET (SOURCES_TO_BE_TESTED
      ../objectFactory.h
      ../objectPool.h
)
SET (UNIT_TESTS_SOURCES unitTests.cpp )
SET (SOURCES_LIST ${UNIT_TESTS_SOURCES} ${SOURCES_TO_BE_TESTED} )
SET (OBJ_EXECUTABLE unitTests)

ADD_EXECUTABLE(${OBJ_EXECUTABLE} ${SOURCES_LIST})

TARGET_LINK_LIBRARIES(${OBJ_EXECUTABLE} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} ${GMOCK_LIBRARIES} ${GMOCK_MAIN_LIBRARIES} )

